# bbs-signature

./: .gitignore  .note.xml  LICENSE.md  README.md  agenda.md  archive.json  draft-bbs-signatures.html  draft-bbs-signatures.md  draft-bbs-signatures.txt  draft-blind-bbs-signatures.html  draft-blind-bbs-signatures.md  draft-blind-bbs-signatures.txt  draft-irtf-cfrg-bbs-signatures-latest.md  draft-irtf-cfrg-bbs-signatures.html  draft-irtf-cfrg-bbs-signatures.md  draft-irtf-cfrg-bbs-signatures.txt  draft-looker-cfrg-bbs-signatures.html  draft-looker-cfrg-bbs-signatures.md  draft-looker-cfrg-bbs-signatures.txt  index.html  package.json  spec.md
.github/: CODEOWNERS  publish.yml  setup.yml  update.yml
.github/workflows/: archive.yml  ghpages.yml  publish.yml  update.yml
meetings/2021-01-24/: agenda.md
meetings/2021-08-13/: agenda.md
meetings/2021-08-27/: agenda.md
meetings/2021-11-15/: agenda.md
meetings/2022-01-10/: agenda.md
meetings/2022-02-08/: agenda.md
meetings/2022-02-21/: agenda.md
meetings/2022-03-07/: agenda.md
meetings/2022-03-21/: agenda.md
meetings/2022-04-05/: agenda.md
meetings/2022-04-18/: agenda.md
meetings/2022-05-02/: agenda.md
meetings/2022-05-09/: agenda.md
meetings/2022-05-16/: agenda.md
meetings/2022-05-23/: agenda.md
meetings/2022-05-30/: agenda.md
meetings/2022-06-13/: agenda.md
meetings/2022-06-20/: agenda.md
meetings/2022-06-27/: agenda.md
meetings/2022-07-04/: agenda.md
meetings/2022-07-11/: agenda.md
scripts/: build-html.sh
tooling/keygen/: Cargo.toml  README.md
tooling/keygen/src/: main.rs
(+276 files in other folders)
